<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="edit_message">Enter your name</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_second">Online Big Tic-Tac-Toe</string>
    <string name="title_activity_game_field">GameFieldActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="name_game">Tic Tac Toe</string>
    <string name="title_activity_online_game_connection">OnlineGameConnectionActivity</string>
    <string name="title_activity_online_players">OnlinePlayersActivity</string>
    <string name="title_activity_list_test">ListTest</string>
    <string name="title_activity_type_of_game">TypeOfGameActivity</string>
    <string name="with_android">With android</string>
    <string name="button_gametypes_online">Online</string>
    <string name="two_players">2 players</string>
    <string name="button_gametypes_bluetooth">Bluetooh</string>
    <string name="texfield_gametypes_selectTypeGame">Select fieldType og game: </string>
    <string name="button_onlineconnection_openroom">Open Room</string>
    <string name="cancel_player">Cancle player</string>
    <string name="invite_for_play">Invite to play</string>
    <string name="update_list">Update list</string>
    <string name="start_game">Start game</string>

    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="button_gamefieldactivity_newgame">New Game</string>
    <string name="button_gamefieldactivity_menu">Menu</string>
    <string name="online_players">Online  players:</string>
    <string name="wanted_battle">Wanted battle :</string>
    <string name="invited_players">Invited players :</string>
    <string name="title_activity_activity_type_registraion">ActivityTypeRegistraion</string>
    <string name="action_settings">Settings</string>
    <string name="texfield_typeregistration_registrby">Sign in:</string>
    <string name="anonymous">anonymous</string>
    <string name="anonym_player">Anonym player</string>
    <string name="please_enter_your_nick_name">Please enter your nick name</string>
    <string name="vk">vkontakte</string>
    <string name="texfield_typeregistration_tictactoe"> - tic-tac-toe account</string>
    <string name="texfield_view_anonnymousconnection_nick">Your nick: </string>
    <string name="button_view_anonnymousconnection_login">Login</string>
    <string name="texfield_windialog_congratulayion">are win by</string>
    <string name="texfield_windialog_word_move">move</string>
    <string name="texfield_windialog_question">Do you want continue game?</string>
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="title_activity_registration_xoaccount">RegistrationXOAccountActivity</string>
    <string name="texfield_regxoaccount_nick">Nick: </string>
    <string name="texfield_regxoaccount_email">Email: </string>
    <string name="texfield_regxoaccount_password">Password: </string>
    <string name="texfield_regxoaccount_congirmpassword">Confirm password: </string>
    <string name="button_regxoaccount_registration">Registration</string>
    <string name="button_registr">Registr</string>
    <string name="texfield_gorgotpass_email">Your email: </string>
    <string name="button_gorgotpass_send">Sent password to email</string>
    <string name="title_activity_activity_online_room">ActivityOnlineroom</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_test">MainTest</string>
    <string name="open_room">Open room</string>
    <string name="update_room_list">Update room list</string>
    <string name="online_rooms">Online rooms:</string>
    <string name="online_room">Online room</string>
    <string name="room_list">Room list:</string>
    <string name="all_online_players">All online players:</string>
    <string name="chat">Chat</string>
    <string name="top_100">Top 100</string>
    <string name="game">Game</string>
    <string name="opened_room">Opened room</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select device</string>
    <string name="none_found">None found</string>
    <string name="none_paired">None paired</string>
    <string name="bluetooth_game">Bluetooth game</string>
    <string name="button_scan">Scan</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="exit_from_game">Exit from game</string>
    <string name="exit_from_this_game">Exit from this game</string>

    <string name="connection_to_server_lost">Connection to server lost</string>
    <string name="please_try_to_connect_once_more">Please try to connect once more</string>
    <string name="is_won">is won</string>
    <string name="are_you_want_continue_game">Are you want to continue game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_first_player_name">The first player name:</string>
    <string name="the_second_player_name">The second player name:</string>
    <string name="login_by">Login by:</string>
    <string name="connection">Connection</string>
    <string name="connecting">Connecting...</string>
    <string name="server_not_available">Sorry, now server isn\'t available, please try later</string>

    <string name="exit_from_room">Exit from room</string>
    <string name="left_the_game">left the game</string>
    <string name="exit_from_room_question">Do you real want to exit from this room?</string>
    <string name="exit_from_game_question">Do you real want to exit from game?</string>
    <string name="exit_from_this_game_question">Do you real want to exit from  this game?</string>
    <string name="exit_from_online_game">Exit from online game</string>
    <string name="exit_from_game_online_question">Do you real want to exit from online game?</string>

    <string name="title_other_devices">Other devices</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="create_bluetooth_game">Create bluetooth game</string>
    <string name="connect_to_bluetooth_game">Connect to bluetooth game</string>
    <string name="new_game">New game</string>
    <string name="back">Back</string>
    <string name="sec">sec</string>
    <string name="nick">Nick</string>
    <string name="room_number">Room number</string>
    <string name="number_players_max_number_players">Number players/max number</string>
    <string name="rating">Rating</string>
    <string name="player_name">Player name</string>
    <string name="position">Position</string>
    <string name="sent">Sent</string>
    <string name="input_your_message">Input your message:</string>
    <string name="new_message">New message!</string>
    <string name="easy_level">- Easy level</string>
    <string name="player">Player</string>
    <string name="android">Android</string>
    <string name="maximum_chars_in_nick_is">Maximum chars in nick is:</string>
    <string name="wait_opponent_connection">Wait opponent connection</string>
    <string name="wait_connection">Wait connection</string>
    <string name="try_connect_to_game">Try connect to game</string>
    <string name="server_started_wait_connection">Server started. Wait connection"</string>




</resources>