<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.componentwithfont.TextViewWirhComicsFont
            android:id="@+id/tv_position"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:gravity="center"
            android:textSize="@dimen/top_100_fragment_list_view_header_text_size"
            android:textColor="@color/red"
            />

    <com.componentwithfont.TextViewWirhComicsFont
            android:id="@+id/tv_player_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textSize="@dimen/top_100_fragment_list_view_header_text_size"
            android:textColor="@color/red"
            android:gravity="center"
            />

    <com.componentwithfont.TextViewWirhComicsFont
            android:id="@+id/tv_player_rating"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="@dimen/top_100_fragment_list_view_header_text_size"
            android:gravity="center"
            android:textColor="@color/red"/>

</LinearLayout>