<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/dialog_view">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_by"
            android:gravity="center"
            android:textSize="@dimen/big_text_size"

            />

    <TextView
            android:id="@+id/tv_anonymous"
           android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/blue"
            android:background="@drawable/selector_for_text_view"
            android:clickable="true"
            />
    <TextView
            android:id="@+id/tv_view"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vk"
            android:gravity="center"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/blue"
            android:background="@drawable/selector_for_text_view"
            android:clickable="true"
            />



</LinearLayout>