<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background2"
              style="@style/default_padding_for_main"
        >

    <LinearLayout

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingLeft="25dp"

            >

        <Button
                android:id="@+id/btn_opened_online_group"
                android:layout_width="@dimen/general_top_button_left_width"
                android:layout_height="match_parent"
                android:background="@drawable/button_big"
                android:text="@string/bluetooth_game"
                />


    </LinearLayout>

    <RelativeLayout
            android:id="@+id/bt_center_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/notebook5"
            android:layout_weight="0.5"
            >

        <TextView
                android:id="@+id/tv_create_bt_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="150dp"
                android:text="@string/create_bluetooth_game"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/blue"
                />

        <TextView
                android:id="@+id/tv_connect_bt_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_below="@+id/tv_create_bt_game"
                android:layout_centerInParent="true"
                android:textSize="@dimen/big_text_size"
                android:text="@string/connect_to_bluetooth_game"
                android:textColor="@color/blue"
                />


    </RelativeLayout>


</LinearLayout>