<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background2"
              android:paddingRight="5dp"
        >

    <LinearLayout

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingLeft="@dimen/general_top_buttons_layout_margin_left"
            >

        <com.componentwithfont.ButtonWithComicsFont
                android:id="@+id/btn_opened_online_group"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_big"
                android:text="@string/game"
                android:textSize="@dimen/general_top_buttons_text_size"
                android:textColor="@color/black"
                />

        <com.componentwithfont.ButtonWithComicsFont
                android:id="@+id/btn_group_chat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_big"
                android:layout_marginLeft="@dimen/general_buttons_separate_width"
                android:text="@string/chat"
                android:textSize="@dimen/general_top_buttons_text_size"
                android:textColor="@color/black"
                />
    </LinearLayout>

    <FrameLayout
            android:id="@+id/center_for_fragment"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:baselineAligned="false"
            android:background="@drawable/notebook5"
            android:paddingLeft="@dimen/opened_activity_layout_fragment_container_padding_left"
            >


    </FrameLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_marginLeft="@dimen/general_top_buttons_layout_margin_left"
            >

        <com.componentwithfont.ButtonWithComicsFont
                android:id="@+id/btn_game_field_new_game"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/general_bottom_buttons_text_size"
                android:background="@drawable/red_leftbutton"
                android:text="@string/new_game"
                android:textColor="@color/black"
                />

        <com.componentwithfont.ButtonWithComicsFont
                android:id="@+id/btn_game_field_back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/general_buttons_separate_width"
                android:layout_height="match_parent"
                android:textSize="@dimen/general_bottom_buttons_text_size"
                android:background="@drawable/red_rightbutton"
                android:text="@string/back"
                android:textColor="@color/black"
                />

    </LinearLayout>


</LinearLayout>