<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/online_open_group_fragment_general_padding_size"
            android:paddingRight="@dimen/online_open_group_fragment_general_padding_size"
            android:orientation="vertical"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_players"
                android:textColor="@color/black"
                android:textSize="@dimen/online_open_group_fragment_text_size_inscription"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/online_open_group_fragment_padding_for_large_list"
                android:paddingBottom="@dimen/online_open_group_fragment_padding_for_large_list"
                android:orientation="vertical"
                android:background="@drawable/list1"
                android:layout_weight="1"
                android:paddingLeft="@dimen/online_open_group_fragment_general_padding_size"
                android:paddingRight="@dimen/online_open_group_fragment_general_padding_size"

                >

            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_activity_players"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <Button
                    android:id="@+id/btn_invite_to_play"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/online_open_group_fragment_invite_update_button_height"
                    style="@style/default_yelow_button"
                    android:text="@string/invite_for_play"
                    />
            <Button
                    android:id="@+id/button_update_activitylist"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/online_open_group_fragment_invite_update_button_height"

                    style="@style/default_yelow_button"
                    android:text="@string/update_list"
                    />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="@dimen/online_open_group_fragment_divider_line_width"
            android:layout_height="match_parent"
            android:background="@drawable/undirect_line"
            ></LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/online_open_group_fragment_general_padding_size"
            android:paddingRight="@dimen/online_open_group_fragment_general_padding_size"
            android:orientation="vertical"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wanted_battle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/online_open_group_fragment_text_size_inscription"
                    />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/online_open_group_fragment_padding_for_small_list"
                    android:paddingBottom="@dimen/online_open_group_fragment_padding_for_small_list"
                    android:orientation="vertical"

                    android:paddingLeft="@dimen/online_open_group_fragment_general_padding_size"
                    android:paddingRight="@dimen/online_open_group_fragment_general_padding_size"
                    android:layout_weight="1"
                    >

                <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/list_player_witch_want_to_play"
                        />
            </LinearLayout>

            <Button
                    android:id="@+id/btn_start_game"
                    android:layout_width="@dimen/online_open_group_fragment_start__cancel_game_button_width"
                    android:layout_height="@dimen/online_open_group_fragment_start_cancel_game_button_height"
                    style="@style/default_yelow_button"
                    android:text="@string/start_game"
                    android:layout_gravity="center"
                    />

        </LinearLayout>



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invited_players"
                    android:textColor="@color/black"
                    android:textSize="@dimen/online_open_group_fragment_text_size_inscription"

                    />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/online_open_group_fragment_padding_for_small_list"
                    android:paddingBottom="@dimen/online_open_group_fragment_padding_for_small_list"
                    android:orientation="vertical"

                    android:layout_weight="1"
                    android:paddingLeft="@dimen/online_open_group_fragment_general_padding_size"
                    android:paddingRight="@dimen/online_open_group_fragment_general_padding_size"
                    >

                <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/list_disered_players"
                        />
            </LinearLayout>

            <Button
                    android:id="@+id/btn_cancel_player"
                    android:layout_width="@dimen/online_open_group_fragment_start__cancel_game_button_width"
                    android:layout_height="@dimen/online_open_group_fragment_start_cancel_game_button_height"
                    style="@style/default_yelow_button"
                    android:text="@string/cancel_player"
                    android:layout_gravity="center"
                    />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>